--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Zoltar the Snarky</title>
+  <title>Zoltar the Wise</title>
   <style>
     body { font-family: sans-serif; text-align: center; padding: 2em; }
     #output { margin-top: 2em; }
@@ -20,39 +20,44 @@
     const output = document.getElementById('output');
 
     const fortunes = [
-      "You will find success... unless you don’t.",
-      "The stars say no. But try anyway.",
-      "A mysterious figure will change your life. It might be your cat.",
-      "You are destined for greatness, or at least mediocrity.",
-      "Good news: you're not cursed. Probably.",
-      "Today’s fortune: try turning it off and on again.",
-      "You will soon achieve something minor, but satisfying.",
-      "A dubious opportunity approaches. Take it. Or don’t."
+      "You are stronger than you know, and good things are coming.",
+      "A moment of clarity will lead to a path of joy.",
+      "Someone believes in you — more than you realize.",
+      "Today is a perfect day to begin something new.",
+      "Kindness you offer will come back multiplied.",
+      "Your light inspires others, even if you don’t see it.",
+      "The universe is quietly working in your favor.",
+      "Believe in the magic of fresh starts."
     ];
-    
-    let recognition = null;
+
     let stage = 'awaiting_trigger';
     let userName = '';
     let isSpeaking = false;
+    let recognition = null;
+    let zoltarVoice = null;
 
-function speak(text) {
-  const utter = new SpeechSynthesisUtterance(text);
-  const voices = speechSynthesis.getVoices();
-  utter.voice = voices.find(v => v.name.includes("Samantha")) || voices[0];
+    window.speechSynthesis.onvoiceschanged = () => {
+      const voices = speechSynthesis.getVoices();
+      zoltarVoice = voices.find(v => v.name.includes("Samantha")) || voices[0];
+    };
 
-  isSpeaking = true;
-  output.textContent = "🗣️ " + text;
+    function speak(text) {
+      const utter = new SpeechSynthesisUtterance(text);
+      utter.voice = zoltarVoice;
 
-  utter.onend = () => {
-    console.log("🔊 Done speaking");
-    isSpeaking = false;
-    if (stage !== 'done') {
-      setTimeout(startRecognition, 1000);
+      isSpeaking = true;
+      output.textContent = "🗣️ " + text;
+
+      utter.onend = () => {
+        console.log("🔊 Done speaking");
+        isSpeaking = false;
+        if (stage !== 'done') {
+          setTimeout(startRecognition, 300);
+        }
+      };
+
+      speechSynthesis.speak(utter);
     }
-  };
-
-  speechSynthesis.speak(utter);
-}
 
     function getRandomFortune() {
       return fortunes[Math.floor(Math.random() * fortunes.length)];
@@ -75,59 +80,58 @@ function speak(text) {
           speak(`${userName}, your fortune is: ${fortune}`);
           stage = 'done';
         } else {
-          speak("Very well. Return when you seek truth.");
+          speak("Very well. Return when you seek insight.");
           stage = 'done';
         }
       }
     }
 
-function startRecognition() {
-  if (isSpeaking) {
-    console.log("⏳ Delaying recognition — still speaking");
-    setTimeout(startRecognition, 500);
-    return;
-  }
+    function startRecognition() {
+      if (isSpeaking) {
+        console.log("⏳ Delaying recognition — still speaking");
+        setTimeout(startRecognition, 300);
+        return;
+      }
 
-  if (recognition) {
-    recognition.abort(); // Clean up old instance
-  }
+      if (recognition) {
+        recognition.abort();
+      }
 
-  recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-  recognition.lang = 'en-US';
-  recognition.interimResults = false;
-  recognition.continuous = false;
+      recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+      recognition.lang = 'en-US';
+      recognition.interimResults = false;
+      recognition.continuous = false;
 
-  recognition.onstart = () => {
-    console.log("🎙️ Listening...");
-    output.textContent = "🎙️ Zoltar is listening...";
-  };
+      recognition.onstart = () => {
+        console.log("🎙️ Listening...");
+        output.textContent = "🎙️ Zoltar is listening...";
+      };
 
-  recognition.onresult = (event) => {
-    const transcript = event.results[0][0].transcript.trim();
-    console.log("✅ Heard: " + transcript);
-    handleSpeechResult(transcript);
-  };
+      recognition.onresult = (event) => {
+        const transcript = event.results[0][0].transcript.trim();
+        console.log("✅ Heard: " + transcript);
+        handleSpeechResult(transcript);
+      };
 
-  recognition.onerror = (event) => {
-    console.error("⚠️ Speech recognition error:", event.error);
-    output.textContent = "⚠️ Error: " + event.error;
-    if (event.error !== "aborted") {
-      setTimeout(startRecognition, 1500);
+      recognition.onerror = (event) => {
+        console.error("⚠️ Speech recognition error:", event.error);
+        output.textContent = "⚠️ Error: " + event.error;
+        if (event.error !== "aborted") {
+          setTimeout(startRecognition, 1000);
+        }
+      };
+
+      recognition.onend = () => {
+        if (!isSpeaking && stage !== 'done') {
+          setTimeout(startRecognition, 800);
+        }
+      };
+
+      recognition.start();
     }
-  };
-
-  recognition.onend = () => {
-    if (!isSpeaking && stage !== 'done') {
-      console.log("🔁 Restarting recognition after end");
-      setTimeout(startRecognition, 1000);
-    }
-  };
-
-  recognition.start();
-}
 
     startButton.addEventListener('click', () => {
-      speak("Greetings, mortal. Say 'Hello Zoltar' to begin.");
+      speak("Greetings, seeker. Say 'Hello Zoltar' to begin.");
       startButton.style.display = 'none';
     });
   </script>
